fix: video, notification & backend progress tracking (#31)
* improve auth flow, notifications, and learning features

* fix sonar issue

* update test

* fix: video, notification & backend progress tracking

* fix lint: add comment to empty catch blocks

* fix test: update verify args to match new referenceType/referenceId

* refactor: extract constants, reduce cognitive complexity, remove useless assignment

* fix: restore constant string values (broken by replaceAll)

* refactor: reduce cognitive complexity (extract methods) + remove unused param